--- a/WpfApp2/WpfApp2/MailsHome.xaml
+++ b/WpfApp2/WpfApp2/MailsHome.xaml
@@ -2,10 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mc="http://s...content-available-to-author-only...s.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d"
+        xmlns:materialDesign="http://m...content-available-to-author-only...l.net/winfx/xaml/themes"
+        xmlns:materialDesign1="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="MailsHome" Height="1050" Width="1400">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -31,7 +31,7 @@
     ExpandDirection="Left" Width="275">
                     <Expander.Header>
                         <TextBlock
-      
+ 
        >
                             <TextBlock.LayoutTransform>
                                 <RotateTransform
@@ -76,7 +76,7 @@
             </DataGrid.Columns>
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
-                    <materialDesign:Card
+                    <materialDesign1:Card
             Background="{DynamicResource MaterialDesignBackground}">
                         <StackPanel>
                             <Expander
@@ -98,8 +98,8 @@
                                                 <RowDefinition Height="auto"></RowDefinition>
                                                 <RowDefinition Height="auto"></RowDefinition>
 
-                                                <RowDefinition Height="35"></RowDefinition>
                                                 <RowDefinition Height="auto"></RowDefinition>
+                                                <RowDefinition ></RowDefinition>
                                                 <RowDefinition Height="6"></RowDefinition>
 
 
@@ -117,11 +117,12 @@
                                             <TextBlock Text="Subject : " FontWeight="Bold" Grid.Column="0" Grid.Row="2" ></TextBlock>
                                             <TextBlock Text="{Binding Subject }" Grid.Column="1" Grid.Row="2" ></TextBlock>
 
-                                            <TextBlock Text="Description : " FontWeight="Bold" Grid.Column="0" Grid.Row="3" ></TextBlock>
-                                            <TextBlock Width="700" TextWrapping="Wrap" Text="{Binding Description }" Grid.Column="1" Grid.Row="3" ></TextBlock>
+                                            <TextBlock Text="Date : " FontWeight="Bold" Grid.Column="0" Grid.Row="3" ></TextBlock>
+                                            <TextBlock Text="{Binding Msgdate }" Grid.Column="1" Grid.Row="3" ></TextBlock>
 
-                                            <TextBlock Text="Date : " FontWeight="Bold" Grid.Column="0" Grid.Row="4" ></TextBlock>
-                                            <TextBlock Text="{Binding Msgdate }" Grid.Column="1" Grid.Row="4" ></TextBlock>
+
+                                            <TextBlock Text="{Binding Description }"  Grid.ColumnSpan="2" Grid.Row="4" TextWrapping="Wrap" Width="700"></TextBlock>
+
                                             <Button Name="deletemsg" Click="Button_Delete"  Grid.Column="1" Grid.Row="5">Delete</Button>
 
                                             <TextBlock  Text="" FontWeight="Bold" Grid.Column="0" Grid.Row="6" ></TextBlock>
@@ -134,7 +135,7 @@
 
 
                         </StackPanel>
-                    </materialDesign:Card>
+                    </materialDesign1:Card>
 
                 </DataTemplate>
             </DataGrid.RowDetailsTemplate>
